--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -5,8 +5,443 @@ color: black
 ---
 # Projects
 
-## This time YOU are almost there!
+---
 
-## We are waiting for your project ideas  
+--
 
-### If you have any idea for a project just fill out this form: [Clik here :)](https://forms.gle/nNJf3wgb6coJk4ZE9)
+<a href="{{ url }}index.html#project1"> <s>Project 1: Mentally Disordered Agents</s> </a>
+
+<a href="{{ url }}index.html#project2">Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
+</a>
+
+<a href="{{ url }}index.html#project3">Project 3: Game controlled by SSVEP paradigm using Blinker device (https://braintech.pl/blinker)
+</a>
+
+<a href="{{ url }}index.html#project4">Project 4: False positives visualized - an explorable exploration</a>
+
+<a href="{{ url }}index.html#project5">Project 5: Talking with Machine Learning models using chatbots</a>
+
+<a href="{{ url }}index.html#project6">Project 6: Reduction of Psychiatric Multimorbidity in a Large Pediatric Sample using EEG and MRI</a>
+
+<a href="{{ url }}index.html#project7">Project 7: Validating quantitative susceptibility mapping (QSM) at 3T and 9.4T</a>
+
+<a href="{{ url }}index.html#project8">Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters</a>
+
+<a href="{{ url }}index.html#project9">Project 9: Enhancing SSVEP detection with frequency hopping</a>
+
+---
+<a id="project1"></a>
+
+## Project 1: Mentally Disordered Agents
+
+
+#### Authors: Paweł Pierzchlewicz
+
+<!--
+
+trzeba dac do leadu afiliacje, tytul naukowy, email
+1. University hospital of Zurcih, Switzerland
+2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
+
+**Abstract**
+Psychiatric disorders are one of the major concerns of the XXI century. Depression, anxiety, addiction and others are becoming significantly more prominent in our society. Yet their mechanisms remain elusive. With the growing variety of computational tools we are beginning to be able to model them, hoping that this will provide a better understanding and allow to overcome the problem. One of these methods is reinforcement learning, which gives insight into the process of decision making.
+
+Reinforcement Learning introduces a playground for testing hypotheses, through building tailored environments, agents perform certain behavioural tasks. It stems from the mathematical description of dopamine, the reward neuromodulator. This allows to model how the brain chooses and values certain actions to achieve set goals. Computational Psychiatry has been using reinforcement learning to figure out what might be causing various mental illnesses. A potential hypothesis could be that the policy (the probability of taking a certain action in a given state) has fallen into the trap of a local maximum of the return function (the total reward received).
+
+This project aims to hijack the established playground enabling testing even the craziest ideas. Let’s throw the agent into an environment where it is constantly surrounded by temptations, and cheer when it manages to overcome them. Maybe place it in a harsh environment where everything is terrible and frightening and observe how he decides to hide away from the world. We will attempt to connect the computational results with underlying neuronal functions. Hopefully by the end, we will gain a deeper understanding of mental illnesses and come up with a neuroscientific hypothesis.
+
+Our main goal will be to explore how the environment influences the behaviour of the agent. We can also examine if changing the way the agent learns about the environment might cause suboptimal behaviour. A basic model for the agent and environment will be provided and we will work on extending them to achieve desired results.
+
+
+**Programming languages that are going to be used in the project**:
+
+Python 
+
+**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
+
+Conversational English with ease of reading scientific papers.
+Reinforcement Learning Basics (preferred)
+Experience with some deep learning framework (Keras, Tensorflow, PyTorch)
+Linear Algebra
+
+**At Brainhack Warsaw we believe that science, programming, and art are similar in their nature. Is there a place in your project for non-programming people? (biologist, artist, medical, psychologist, etc)**
+
+Yes
+
+**If the answer was yes, what profession can they be? And how many can join you?**
+
+2 biologists/psychiatrists/psychologists, 1 artist
+
+**What participants gain/learn from this project:**
+
+Reinforcement Learning Basics
+Computational Psychiatry
+Coding Skills
+Insight into mental disorders
+
+
+**A list of 1-5 key papers / online materials summarising the subject:**
+
+
+1. Adams, R. A., Huys, Q. J. M., & Roiser, J. P. (2016). Computational Psychiatry: Towards a mathematically informed understanding of mental illness. Journal of Neurology, Neurosurgery and Psychiatry, 87(1), 53–63. https://doi.org/10.1136/jnnp-2015-310737
+2. Dayan, P. (2009). Dopamine, Reinforcement Learning, and Addiction.
+3. Redish, A. D., Jensen, S., & Johnson, A. (2008). A unified framework for addiction: Vulnerabilities in the decision process. Behavioral and Brain Sciences, 31(4), 415–487. https://doi.org/10.1017/S0140525X0800472X
+4. Sharp, P. B., & Eldar, E. (2019). Computational Models of Anxiety: Nascent Efforts and Future Directions. Current Directions in Psychological Science, 28(2), 170–176. https://doi.org/10.1177/0963721418818441
+5. Mkrtchian, A., Aylward, J., Dayan, P., Roiser, J. P., & Robinson, O. J. (2017). Modeling Avoidance in Mood and Anxiety Disorders Using Reinforcement Learning. Biological Psychiatry, 82(7), 532–539. https://doi.org/10.1016/j.biopsych.2017.01.017
+
+
+**Preferred maximal number of participants:** 8
+
+
+---
+<a id="project2"></a>
+
+## Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
+
+
+#### Authors: Magdalena Sołyga
+
+<!--
+
+trzeba dac do leadu afiliacje, tytul naukowy, email
+1. University hospital of Zurcih, Switzerland
+2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
+
+**Abstract**
+How our brain is making sense of sounds is definitely a basic question in auditory neuroscience. Whether strength, timing, adaptation, correlation or tuning of neural activity in the brain reflect useful auditory information is far from our understanding.
+While performing multi-unit extracellular recordings, we collect an enormous amount of neural activity data, containing both spiking activity and the local field potentials recorded simultaneously from tens of neurons and many cortical layers. 
+The aim of the project is to explore the number of questions which can be answered while analyzing a set of electrophysiology data acquired from two primary auditory cortices in mice (Solyga & Barkat, 2019). Participants would have freedom to test how properties of auditory neural responses change for sounds with different parameters, in different auditory regions and layers and try to decide which of the parameter reflects according to them the most useful information on auditory stimuli. 
+Through the project, you will gain a basic understanding of acquiring and analyzing multi-unit electrophysiological data and get a chance to test your own hypothesis. This project aims to emphasize the sheer amount of information we can get from one set of recordings and that electrophysiological data should be widely shared to exploit them fully.
+
+
+**Programming languages that are going to be used in the project**:
+
+Matlab/Octave
+
+**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
+
+o    BSc program, or higher
+o    English: good
+o    programming languages / other competences: MATLAB®
+o    Knowledge related to auditory cortex/hearing will be advantage
+
+**At Brainhack Warsaw we believe that science, programming, and art are similar in their nature. Is there a place in your project for non-programming people? (biologist, artist, medical, psychologist, etc)**
+
+Yes
+
+**If the answer was yes, what profession can they be? And how many can join you?**
+
+Musicians or biologists (max 2)
+
+**What participants gain/learn from this project:**
+
+Basic understanding of experimental approaches in auditory neuroscience
+Experimental and analysis flow of multi-unit extracellular recordings
+Hands on session with data analysis
+Testing own hypothesis
+If you are a beginner in electrophysiology data analysis you will learn how to handle data to represent basic neural response’s parameters. If you have already experience, you can discover totally new facts about sounds processing in mouse auditory cortex. 
+
+
+
+**A list of 1-5 key papers / online materials summarising the subject:**
+
+
+1. Sołyga, M., & Barkat, T. R. (2019). Distinct processing of tone offset in two primary auditory cortices. Scientific reports, 9(1), 1-12.
+2. King, A. J., Teki, S., & Willmore, B. D. (2018). Recent advances in understanding the auditory cortex. F1000Research, 7.
+3. Guo, W., Chambers, A. R., Darrow, K. N., Hancock, K. E., Shinn-Cunningham, B. G., & Polley, D. B. (2012). Robustness of cortical topography across fields, laminae, anesthetic states, and neurophysiological signal types. Journal of Neuroscience, 32(27), 9159-9172.
+
+**Preferred maximal number of participants:** 6
+
+<!--
+---
+<a id="project3"></a>
+
+## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
+
+### All places booked
+
+#### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński, MSc <sup>2</sup>
+
+1. Faculty of Physics, University of Warsaw, Poland
+2. Scuola Normale Superiore di Pisa, Italy
+
+**Abstract:**
+The recent development in Network Science had a significant impact on many fields of science. Networks proved to be suitable tools in describing a variety of complex systems, brain being one of them. So-called brain networks, based mainly on fMRI or EEG signals, were characterized by a non-trivial hierarchical structure [1]. Interestingly, it was shown that neurological and psychiatric disorders are often accompanied by significant changes in this characteristic structure [2].
+
+Despite initial successes, there is still a number of bottlenecks in the brain networks analysis. In particular, how to properly estimate connections between different parts of the brain? More specifically, how to get rid of bias imposed by volume conduction or active reference electrode? This bias, that affects all signal simultaneously is often referred to as the problem of common sources. It is widely accepted that neuronal synchrony is a good measure of functional integrity in the brain. There are, however, many ways to estimate it. Recent results suggest that methods based on Phase Lag Index are well suited when using EEG data. They were shown to successfully diminish bias from common sources and give better results both for synthetic and real data [3].
+
+Epilepsy is a highly prevalent disorder. 1% of all emergency department visits in USA are caused by epilepsy. In 2004 it resulted in around $ 17 billion of economic costs in Europe, 2 billion in India and $ 1 billion in USA. Yet the brain activity during seizures is still not well explained in the scientific literature. Its connection to brain electrical activity makes it natural to choose EEG as an experimental tool to collect the data suitable for diagnosis. In the project, we will provide with EEG datasets from patients with epilepsy and we will attempt to determine whether the brain network structure changes during epileptic seizures. In order to approach this question, we will use Phase Lag Index based measures. Finally, we would like to determine whether the network characteristics may be more successful in distinguishing or even predicting, different epileptic states, in comparison with classical indicators, such as the signal variance.
+
+![test image size]({{ site.url }}/img/projects/project3.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+**A list of 1-6 key papers/materials summarising the subject:**
+1. Meunier, D., Lambiotte, R., & Bullmore, E. T. (2010). Modular and hierarchically modular organization of brain networks. Frontiers in neuroscience, 4, 200.
+2. Stam, C. J. (2014). Modern network science of neurological disorders. Nature Reviews Neuroscience, 15(10), 683.
+3. Stam, C. J., Nolte, G., & Daffertshofer, A. (2007). Phase lag index: assessment of functional connectivity from multi channel EEG and MEG with diminished bias from common sources. Human brain mapping, 28(11), 1178-1193.
+4. Bullmore, Ed, and Olaf Sporns. "Complex brain networks: graph theoretical analysis of structural and functional systems." Nature Reviews Neuroscience 10.3 (2009): 186.
+5. [https://en.wikipedia.org/wiki/Epilepsy](https://en.wikipedia.org/wiki/Epilepsy) and [https://en.wikipedia.org/wiki/Electroencephalography](https://en.wikipedia.org/wiki/Electroencephalography)
+6. Scheffer, Marten, et al. "Early-warning signals for critical transitions." Nature 461.7260 (2009): 53.
+
+**List of useful skills in the project:**
+* Neurobiological knowledge
+* Signal analysis
+* Data visualization
+* EEG signal analysis and modelling
+* Network analysis
+* Programming in Python, Igraph (python library)
+* English (reading, writing)
+* BSc program, or higher
+* Bring computer
+
+**A maximal number of participants:** 6
+
+**Skills and competences to be acquired during the project:**
+1. Team work (programming and solving problems in parallel)
+2. Presenting scientific results (writing paragraphs, creating figures etc.)
+3. Data preprocessing
+
+**Is there a plan for extending this work to a paper in case the results are promising?** Not sure
+
+---
+<a id="project4"></a>
+
+## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
+
+### All places booked
+
+#### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  / Katarzyna Kańska <sup>2</sup>
+
+1. p.migdal.pl
+2. Faculty of Mathematics, Informatics, and Mechanics, University of Warsaw, Poland
+
+**Abstract:**
+Convolutional neural networks are the state-of-the-art solution for image classification. They are able to recognize images at near-human (or occasionally: super-human) level. Their basic units are very different from the biological ones. Each layer is an array, for processing we use convolutions and matrix multiplications, and for gating - simple mathematical functions. Yet, the global architecture of local, hierarchical processing was inspired by mammalian visual cortex.
+
+In this project we are going to explore which kind of information is being processed. We will try dissecting a network to see if a subset of network is able to recognize an image. We will try to see if different neural ImageNet architecture (e.g. VGG, ResNet, Inception, etc) “see” similar features.
+
+And, in the absence of any ethics commission for artificial neural networks, we will cut two networks, sew them, and see is this frankensteinian model is able to recognize images.
+
+![test image size]({{ site.url }}/img/projects/project4.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
+
+**A list of 1-5 key papers/materials summarising the subject:**
+1. Chris Olah et al., “Feature Visualization”, Distill, [https://distill.pub/2017/feature-visualization/](https://distill.pub/2017/feature-visualization/)
+2. Jason Yosinski et al., “How transferable are features in deep neural networks?”, [https://arxiv.org/abs/1411.1792](https://arxiv.org/abs/1411.1792)
+3. Radoslaw Martin Cichy et al., “Comparison of deep neural networks to spatio-temporal cortical dynamics of human visual object recognition reveals hierarchical correspondence”, [https://www.nature.com/articles/srep27755](https://www.nature.com/articles/srep27755)
+4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, [https://www.pnas.org/content/111/23/8619](https://www.pnas.org/content/111/23/8619)
+
+**List of useful skills in the project:**
+* Expert knowledge related to the visual cortex
+* Psychology of vision
+* Academic and technical writing
+* Data visualization (academic, technical or artistic)
+* I assume at least basic experience with programming and Python. If not yet, I gathered some materials there:
+[https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html](https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html)
+* To get overview of deep learning for image classification, I suggest reading my blog post:
+[https://p.migdal.pl/2017/04/30/teaching-deep-learning.html](https://p.migdal.pl/2017/04/30/teaching-deep-learning.html)
+* Please, read and run code (on Kaggle, Neptune or your local computer) for:
+[https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/](https://deepsense.ai/keras-vs-pytorch-avp-transfer-learning/)
+* I really encourage you to try transfer learning (in either Keras or PyTorch) for a different dataset (pick any, e.g. chihuahua or muffin) and send screenshots of a few classified, and misclassified examples (along with their probabilities). In case there is more people interested in this project than spots, I will use it as a qualification criterion.
+* If you have any questions, feel invited to email me!
+
+**Skills and competences to be acquired during the project:**
+* Insight into the inner workings of deep learning (artificial neural networks) and analogies with biological image processing
+
+**A maximal number of participants:** 10
+
+**Is there a plan for extending this work to a paper in case the results are promising?** yes
+
+---
+<a id="project5"></a>
+
+## Project 5: Tackling the ABCD Neurocognitive Prediction Challenge
+
+### All places booked
+
+#### Authors: Hanna Nowicka <sup>1</sup> <a href="mailto:hn.nowicka@gmail.com"><i class="fa fa-envelope"></i></a>
+
+1.Oxford Centre for Functional MRI of the Brain (FMRIB), Wellcome Centre for Integrative Neuroimaging (WIN), University of Oxford, United Kingdom
+
+**Abstract:**
+The objective of the project is to propose the method for predicting fluid intelligence in children from the T1-weighted MRI images. Work will most likely consist of data preprocessing, dimensionality reduction and fitting a regression model.
+First idea will be to apply methods like PCA for exploratory analysis and VAEs for nonlinear dimensionality reduction. Then we will use the space from VAEs to gaussian process regression and test different kernels. Of course, other approaches are also possible, depending on the preliminary results and the interest of the team.
+If successful, the aim is to submit the method to the ABCD Neurocognitive Prediction Challenge which is hold in conjugation with MICCAI 2019 conference. Preprocessed data is provided by the challenge organisers (requires registration in advance). More details about the problem and the data are available at: [https://sibis.sri.com/abcd-np-challenge/](https://sibis.sri.com/abcd-np-challenge/).
+
+**A list of 1-5 key papers/materials summarising the subject:**
+1. Challenge website: [https://sibis.sri.com/abcd-np-challenge/](https://sibis.sri.com/abcd-np-challenge/)  (information about the challenge and how to register to access the data)
+2. Details about the data processing performed: [https://www.biorxiv.org/content/early/2018/11/04/457739](https://www.biorxiv.org/content/early/2018/11/04/457739)
+3. 'Introduction to Neuroimaging Analysis’ – Oxford Neuroimaging Primers, Mark Jenkinson and Michael Chappell, Oxford University Press, 2017
+4. Some read about fluid intelligence
+
+**A list of requirements for taking part in the project:**
+* IMPORTANT: Registration to access the data prior to the hackathon is strictly required. Sadly, we cannot allow anyone without the DUC approval to work with the data (and it might take few days to obtain the access as it requires the institution support) so please do that in advance, if interested in taking part in the project!
+* English skills good enough to communicate with international team.
+* At least basic Python skills.
+
+**A maximal number of participants on the project:** 6
+
+**Skills and competences you can learn during the project:**
+The main gain from the project would be having a submission to the MICCAI challenge.
+Hopefully, we can get group with varied skills and learn from each other skills like: basics of structural brain MRI processing and interpretation, data science and visualisation, machine learning in Python.
+
+**Is there a plan for extending this work to a paper in case the results are promising?** Not sure
+
+---
+<a id="project6"></a>
+
+## Project 6: Multidimensionality problem in passive BCI for game control
+
+#### Authors: Maciej Rudziński <sup>1</sup> <a href="mailto:rudzinskimaciej@gmail.com"><i class="fa fa-envelope"></i></a> /Adrian Elczewski
+
+1.BrainAttach; Brain Tracking
+
+**Abstract:**
+In BCI, the environment is controlled by users through listening to active mental commands that need active effort and learning process. In this project, we are proposing a different paradigm where BCI algorithms listen to well-defined passive bottom-up processes like emotions and attention to choose/guess user preferred action. This approach is similar to [Flying Mollusk](https://www.flyingmollusk.com/) work but we are proposing its further development and more specific emotions indicators as a starting point.
+We are providing
+- 2 EEG setups with 2 channels (5 electrodes) and 1k Hz sampling
+- Web service that:
+1. Cleans signal and removes artifacts
+2. Converts signal into emotions (BIS-BAS*) and attention indicators
+3. Is integrated to the provided game for ease of work
+- Short lecture about BIS-BAS
+- Short lecture on signal quality and cleaning methods
+- Introduction to the problem of multidimensionality and timescales, in the use of
+emotions, for controlling (or assisting) games and devices
+- Presentation of sample Python game reacting to emotions (cannon) and how to
+use indicator e.g shooting on BAS
+- Walk through Python game code [http://www.grantjenks.com/docs/freegames/](http://www.grantjenks.com/docs/freegames/)
+- Help with development, expanding and optimizing parameters (The “problem of
+multidimensionality and timescales”)
+- Brains tournament in cannon between teams (if time permits)
+
+**A list of 1-5 key papers summarising the subject:**
+1. [http://gamestudies.org/1801/articles/david_melhart](http://gamestudies.org/1801/articles/david_melhart)
+2. [http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.96.352&rep=rep1&type=pdf](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.96.352&rep=rep1&type=pdf)
+3. [https://www.ted.com/talks/mihaly_csikszentmihalyi_on_flow?language=en](https://www.ted.com/talks/mihaly_csikszentmihalyi_on_flow?language=en)
+
+**A list of requirements for taking part in the project:**
+* English : communicative,
+* Python experience above 1 month of active use,
+* Psychology basic concepts (emotions) would be a plus,
+* ML experience will give you more fun
+
+**A maximum number of participants:** 10
+
+**What can the participant gain from the project?**
+1. Transferring/joining knowledge from neuroscience/psychology with practical application in BCI.
+2. How to create player aware games.
+3. Interpretation of BIS-BAS and Flow concept in real life situation.
+4. How attention is linked to emotions.
+
+**Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?** Not sure
+
+---
+<a id="project7"></a>
+
+## Project 7: Cross-Recurrence Quantification Analysis (cRQA) as a new measure of functional connectivity
+
+### All places booked
+
+#### Authors: Krzysztof Bielski <sup>1</sup> <a href="mailto:k.bielski@nencki.gov.pl"><i class="fa fa-envelope"></i></a> / Joanna Rączaszek-Leonardi <sup>2</sup>
+
+1. Nencki Institute of Experimental Biology PAS, Warsaw, Poland
+2. Faculty of Psychology, University of Warsaw, Poland
+
+**Abstract:**
+The human brain organization might be characterized by two basic properties: the segregation and the integration (Friston, 1994). While the functional segregation describes specialization of the brain areas or networks, the functional integration provides an insight on how information between specialized areas/networks is integrated. This second property is frequently studied by observing brain connectivity patterns. In recent years, one type of connectivity namely functional connectivity has gained a great attention. In fact, actually this concept is not directly associated with biologically-rooted connections (for example, long-range white matter tracts) but rather with the similarity between time-series of BOLD, EEG or other neuroimaging signals. It follows logic: if signals from two brain areas are similar, these two brain regions are involved in processing similar information and thus, they are functionally connected. Most often, such functional connections are assessed with measures like the Pearson correlation. However, relatively smaller number of studies deal with measures directly associated with temporal structures in the data (e.g. mutual information etc.). In our project, we would like to develop a method introduced by Lombardi et al. (2017) for estimating functional connectivity patterns known from the Dynamical Systems Theory - cross Recurrence Quantification Analysis (cRQA). cRQA is a method which find application in analyzing coupling dynamical systems such as social interactions in dyads, interdependence of EEG signals etc. It allows presenting complex interactions in the simple form of a vector of measures describing state-switching properties of time-series. Following observations by Lombardi et al. (2017), we aim to compare obtained connectivity patterns defined by the cRQA with connectivity patterns obtained with the Pearson Correlation. We will use task-fMRI data from procedures testing different cognitive and emotional processes as well as resting-state fMRI data taken from the Human Connectome Project database.
+
+**A list of 1-5 key papers summarising the subject:**
+1. Lombardi, A., Tangaro, S., Bellotti, R., Bertolino, A., Blasi, G., Pergola, G., … Guaragnella, C. (2017). A Novel Synchronization-Based Approach for Functional Connectivity Analysis. Complexity, 2017, 1–12. [https://doi.org/10.1155/2017/7190758](https://doi.org/10.1155/2017/7190758)
+2. Marwan, N., & Webber, C. L. (2015). Mathematical and Computational Foundations of Recurrence Quantifications. In C. L. Webber, & N. Marwan (Eds.), Recurrence Quantification Analysis: Theory and Best Practices. Cham: Springer International Publishing. [https://doi.org/10.1007/978-3-319-07155-8](https://doi.org/10.1007/978-3-319-07155-8)
+3. Bastos, A. M., & Schoffelen, J.-M. (2016). A Tutorial Review of Functional Connectivity Analysis Methods and Their Interpretational Pitfalls. Frontiers in Systems Neuroscience, 9(January), 1–23. [https://doi.org/10.3389/fnsys.2015.00175](https://doi.org/10.3389/fnsys.2015.00175)
+
+**A list of requirements for taking part in the project:**
+* Students from Bachelor degree level or higher
+* Communicative English
+* Basic programming skills in Python and Matlab
+
+**Maximum number of participants:** 6
+
+**What can the participant gain from the project?**
+1. Cooperation in small team
+2. Knowledge about applying Dynamical Systems Theory to neuroimaging data
+3. Knowledge about analysis of functional connectivity
+
+**Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?**
+Yes
+
+---
+<a id="project8"></a>
+
+## Project 8: EMG-based desktop controlling
+
+#### Authors: Paweł Pierzchlewicz <sup>1</sup> <a href="mailto:p.pierzchlewic@student.uw.edu.pl"><i class="fa fa-envelope"></i></a>
+
+1. University of Warsaw, Faculty of Physics, Poland
+
+**Abstract:**
+The daily usage of our computers can become daunting at times: we spend our days slouched by the keyboard. What if we could create a method for controlling the computer using gestures?
+The idea is to create a prototype for a wearable Human-Computer Interface (HCI) based on electromyography (EMG) signals. We will start off by gathering training data. Later through the use of Barachant's Minimum Distance to Mean (MDM) ([https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf](https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf)) algorithm we will attempt to classify some simple gestures. This will be handled by a raspberry pi if possible. Finally, a client on a target remote computer will capture the determined gestures and map them into useful actions like opening the browser etc.
+
+This will require certain tasks to be performed: gathering of learning data, creating a classification model, building a client app to map the classified action.
+
+**A list of 1-5 key papers / online materials summarising the subject:**
+1. [https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf](https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf),
+2. [https://ieeexplore.ieee.org/abstract/document/1570513](https://ieeexplore.ieee.org/abstract/document/1570513)
+
+**List of useful skills in the project:**
+* Graphic design,
+* Muscle anatomy,
+* Motor neuron physiology,
+* Modelnig,
+* Comfortable with python,
+* English good enough to read code documentation and some research articles,
+* Signal processing would be a plus
+
+**Maximum number of participants:** 10
+
+**What participants gain/learn from this  project:**
+They can learn an interesting method for signal analysis.
+Can gain experience with biosignal experimental setups.
+
+**Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?** Yes
+
+---
+<a id="project9"></a>
+
+## Project 9: Mapping the state of modern psychology  through the  public online activity of scientists
+
+#### Authors: Daniel Borek <sup>1</sup> <a href="mailto:dtborek@ugent.be"><i class="fa fa-envelope"></i></a>
+
+1. Department of Data Analysis, Faculty of Psychology and Educational Sciences, Ghent University, Ghent, Belgium
+
+**Abstract:** Many active scientists use online social networks to share their research. Many of the ideas shaping modern science are disseminated this way. Online discussions between scientists precede and often shape what is published in journals.
+
+This project aims to map relations and mutual influence in online science communities. Psychology and neuroscience communities are especially interesting. These fields are accompanied by transient changes, due to replication crisis, open science movement and  many methodological debates  and advances.
+
+Is it possible to map the structure of the field and “hot” topics using mostly Twitter data? How the information about publications spreads? What define that the paper will become popular (apart from scientific merit)? These questions are relevant not only for disciplines such as sociology of science. Also, answers could inform those, who want to share their research with others in the most effective way. P
+
+The project could use existing [dataset](<https://www.altmetric.com/blog/twitter-in-scholarly-communication/>). We will also download relevant data directly from Twitter to answer specific problems. Please remember that there are some limitations imposed on downloading data from the service. We will process and analyze data using open languages like R or Python. We could use Gephi for visualizations. Example analysis could involve simple graph-theoretical measures to map the relation between different sub-disciplines.
+
+Further direction for the analysis will depend on participants and the availability of data. The project description soon will be accompanied by a small demo. Other ideas on how to analyze the public online presence of scientists are also welcome.
+
+
+**A list of 1-6 key papers / online materials summarising the subject:**
+1. Example of mapping the field structure using published papers  [https://homepage.univie.ac.at/noichlm94/posts/structure-of-recent-philosophy-ii/](https://homepage.univie.ac.at/noichlm94/posts/structure-of-recent-philosophy-ii/)
+2. Example of mapping the networks of economist on twitter
+3. [https://io.mongeau.net/repec-twitter-network/?fbclid=IwAR0Z07I_3FmGjTofeXa1omEACdxdcfHlxUE44J-W_yjLx7WWFBCvXMXUDjs](https://io.mongeau.net/repec-twitter-network/?fbclid=IwAR0Z07I_3FmGjTofeXa1omEACdxdcfHlxUE44J-W_yjLx7WWFBCvXMXUDjs)
+4. Downloading  tweets: [http://social-metrics.org/downloading-tweets-by-a-list-of-users-take2/](http://social-metrics.org/downloading-tweets-by-a-list-of-users-take2/)
+5. Similar analyses in  humanities: [http://journalofdigitalhumanities.org/1-3/the-impact-of-social-media-on-the-dissemination-of-research-by-melissa-terras/](http://journalofdigitalhumanities.org/1-3/the-impact-of-social-media-on-the-dissemination-of-research-by-melissa-terras/)
+[https://arxiv.org/pdf/1807.05571.pdf](https://arxiv.org/pdf/1807.05571.pdf)
+6. How to make a graph of  twitter followers: [https://github.com/alumbreras/twitter-followers-graph](https://github.com/alumbreras/twitter-followers-graph)
+
+**List of useful skills in the project:**
+* BSc program, or higher
+* English: good, not necessarily proficient
+* Good Python/R programming skills and basic familiarity with machine learning is a plus, but you could participate even when you cant program
+
+
+**Maximum number of participants:** 12
+
+**Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?** Yes -->
+
+
