--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -6,9 +6,14 @@ color: darkblue
 
 # Past Editions
 
-This is the third time that Brainhack Warsaw is happening. We are proud that out initiative has gone so far and happy o share with you what have happened before. You can read about all the projects conducted before, engage with our previous guests and also get a glipse of what you might be expecting this year. 
+This is the third time that Brainhack Warsaw is happening. We are proud that out initiative has gone so far and happy to share with you what have happened before. You can read about all the projects conducted before, engage with our previous guests and also get a glimpse of what you might be expecting this year. 
 
-If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
+Remember that reading all about what we experienced before might be a great start on your yourney with Neuroinformatics, Machine Learning and Brain Sciences. Reading about previous editions you can also be inspired to prepare Brainhack Warsaw 2020 project idea.
+
+We believe that the drive for exploration, curiosity and reaching out is what makes our community a great place for everyone. See what it what and is like to be a part of this initiative and do not hesitate to contact us in case of any further questions conserning previous editions of our hackathon conference.
+
+
+Click on our brain and find out more about Brainhack Warsaw!
 
 
 <div id="profile-container">
@@ -28,4 +33,3 @@ If you want to take a look at first and second edition: [**here**](https://brain
         <h1 style="font-family:verdana;">2019</h1>
     </div>
 </div>
-
