--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -1,6 +1,6 @@
 ---
 title: About
-bg: emerald
+bg: light_gree
 color: darkblue
 ---
 
@@ -26,7 +26,4 @@ By submitting your own, genuine research project, you can gain a priceless leade
 **Deadline for participant registration**:               15.03.2020
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
-
-### Brainhack Warsaw - Past Editions
-If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
 
