--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -10,16 +10,17 @@ This is the third time that Brainhack Warsaw is happening. We are proud that out
 
 If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
 
-<div align="left" class="img-with-text">
+
+<div id="2017" class="img-with-text">
     <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
-    <img src="img/brain_ico.png" width="40%" height="40%" alt="bh2017">
+    <img src="img/brain_ico.png" width="50%" height="50%" alt="bh2017">
     </a>
     <p>2017</p>
 </div>
 
-<div align="right" class="img-with-text">
-    <a href="https://brainhackwarsaw2019.github.io" target="_blank">
-    <img src="img/brain_ico.png" width="40%" height="40%" alt="bh2019">
+<div id="2019" class="img-with-text">
+    <a href="https://brainhackwarsaw2019.github.io/" target="_blank">
+    <img src="img/brain_ico.png" width="50%" height="50%" alt="bh2017">
     </a>
     <p>2019</p>
 </div>
